force-app/main/default/objects/KDCE_Message_Click__c/KDCE_Message_Click__c.object-meta.xml
<CustomObject>
    <description>Contact 별 마케팅 메시지 (이메일, 문자, 카카오톡 ) 발송, 오픈, 클릭  데이터</description>
    <label>Message Click</label>
    <nameField>
        <displayFormat>M-{000000000}</displayFormat>
        <label>Message Click Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Message Clicks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>