force-app/main/default/objects/KDCE_Message_Click__c/fields/ClickDatetime__c.field-meta.xml
<CustomField>
    <fullName>ClickDatetime__c</fullName>
    <label>Click Datetime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>