force-app/main/default/objects/KDCE_Message_Click__c/fields/CompaignID__c.field-meta.xml
<CustomField>
    <fullName>CompaignID__c</fullName>
    <label>Compaign ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>