force-app/main/default/objects/KDCE_Message_Click__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Message Clicks</relationshipLabel>
    <relationshipName>Message_Clicks</relationshipName>
    <type>Lookup</type>
</CustomField>