force-app/main/default/objects/KDCE_Message_Click__c/fields/RedirectUrl__c.field-meta.xml
<CustomField>
    <fullName>RedirectUrl__c</fullName>
    <label>Redirect Url</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>